improved workload mapper and service code, to be more readable and shorter. add: update function to teachingStaff object