@@ -46,55 +46,15 @@ public class WorkloadService {
 
     public Integer save(WorkloadRequest request) {
         WorkloadEntities entities = resolveEntities(request);
-        double programCoefficient = getProgramCoefficient(entities.groupForSemester);
-        double totalCreditPoints = getTotalCreditPoints(request.groupAmount(), request.creditPointsPerGroup(), programCoefficient);
-        double cpProportionOnFullTime = getCpProportionOnFullTime(entities.academicRankDetails().getCpForFullTime(), totalCreditPoints);
-        double salaryPerMonth = getSalaryPerMonth(entities.academicRankDetails.getSalary(), cpProportionOnFullTime, request.industryCoefficient());
-        double expectedSalary = getExpectedSalary(request.workingMonths(), request.vacationMonths(), salaryPerMonth);
-        Workload workload = workloadMapper.toWorkload(
-                programCoefficient,
-                totalCreditPoints,
-                cpProportionOnFullTime,
-                salaryPerMonth,
-                expectedSalary,
-                request,
-                entities.teachingStaff,
-                entities.semester,
-                entities.course,
-                entities.academicRankDetails,
-                entities.myClasses,
-                entities.groupForSemester
-
-        );
-        System.out.println("Prop: " + workload.getCpProportionOnFullTime() + " Salary: " + workload.getSalaryPerMonth() + " Total CP: " + workload.getTotalCreditPoints());
+        Workload workload = workloadMapper.toWorkload(entities, request);
         return workloadRepo.save(workload).getWorkloadId();
     }
-
-    private double getExpectedSalary(int wm, int vm, double salaryPerMonth) {
-        return round((vm+wm)*salaryPerMonth,2);
-    }
-
     public WorkloadResponse findById(Integer workloadId) {
         return workloadRepo.findById(workloadId)
                 .map(workloadMapper::toWorkloadResponse)
                 .orElseThrow(() -> new EntityNotFoundException("Workload with id: " + workloadId + " not found."));
     }
 
-//    public PageResponse<WorkloadResponse> findAllWorkloads(Pageable pageable) {
-//        Page<Workload> workloads = workloadRepo.findAll(pageable);
-//        List<WorkloadResponse> workloadResponses = workloads.stream()
-//                .map(workloadMapper::toWorkloadResponse)
-//                .toList();
-//        return new PageResponse<>(
-//                workloadResponses,
-//                workloads.getNumber(),
-//                workloads.getSize(),
-//                workloads.getTotalElements(),
-//                workloads.getTotalPages(),
-//                workloads.isFirst(),
-//                workloads.isLast()
-//        );
-//    }
 public PageResponse<WorkloadResponse> findAllWorkloads(Pageable pageable, Map<String, FilterCriteria> filters) {
     Page<Workload> workloads;
     if (filters != null && !filters.isEmpty()) {
@@ -197,39 +157,12 @@ public PageResponse<WorkloadResponse> findAllWorkloads(Pageable pageable, Map<St
     public Integer update(Integer workloadId, WorkloadRequest request) {
         Workload existingWorkload = workloadRepo.findById(workloadId)
                 .orElseThrow(() -> new EntityNotFoundException("Workload with id: " + workloadId + " not found."));
+        WorkloadEntities wEntities = resolveEntities(request);
 
-        WorkloadEntities entities = resolveEntities(request);
-        existingWorkload.setCreditPointsPerGroup(request.creditPointsPerGroup());
-        existingWorkload.setTeachingStaff(entities.teachingStaff);
-        existingWorkload.setSemester(entities.semester);
-        existingWorkload.setCourse(entities.course);
-        existingWorkload.setAcademicRankDetails(entities.academicRankDetails);
-        existingWorkload.setMyClasses(entities.myClasses);
-        existingWorkload.setGroupForSemester(entities.groupForSemester);
+        Workload updatedWorkload = workloadMapper.toWorkload(wEntities, request);
+        updatedWorkload.setWorkloadId(existingWorkload.getWorkloadId());
 
-        existingWorkload.setComments(request.comments());
-        existingWorkload.setIncludeInBudget(request.includeInBudget());
-        existingWorkload.setBudgetPosition(request.budgetPosition());
-        existingWorkload.setIndustryCoefficient(request.industryCoefficient());
-        existingWorkload.setVacationMonths(request.vacationMonths());
-        existingWorkload.setWorkingMonths(request.workingMonths());
-
-        existingWorkload.setGroupAmount(request.groupAmount());
-
-        double programCoefficient = getProgramCoefficient(entities.groupForSemester);
-        existingWorkload.setProgramCoefficient(programCoefficient);
-        double totalCreditPoints = getTotalCreditPoints(request.groupAmount(), request.creditPointsPerGroup(), programCoefficient);
-        existingWorkload.setTotalCreditPoints(totalCreditPoints);
-        existingWorkload.setContactHours(totalCreditPoints);
-        double cpProportionOnFullTime = getCpProportionOnFullTime(entities.academicRankDetails().getCpForFullTime(), totalCreditPoints);
-        existingWorkload.setCpProportionOnFullTime(cpProportionOnFullTime);
-        double salaryPerMonth = getSalaryPerMonth(entities.academicRankDetails.getSalary(), cpProportionOnFullTime, request.industryCoefficient());
-        existingWorkload.setSalaryPerMonth(salaryPerMonth);
-        double expectedSalary = getExpectedSalary(request.workingMonths(), request.vacationMonths(), salaryPerMonth);
-        existingWorkload.setExpectedSalary(expectedSalary);
-        System.out.println("calc PROP:" + cpProportionOnFullTime);
-        System.out.println("Prop: " + existingWorkload.getCpProportionOnFullTime() + " Salary: " + existingWorkload.getSalaryPerMonth() + " Total CP: " + existingWorkload.getTotalCreditPoints());
-        return workloadRepo.save(existingWorkload).getWorkloadId();
+        return workloadRepo.save(updatedWorkload).getWorkloadId();
     }
 
   // gets objects from database using their response ids
@@ -240,38 +173,14 @@ public PageResponse<WorkloadResponse> findAllWorkloads(Pageable pageable, Map<St
         Course course = courseService.findCourseFromResponseId(request.courseId());
         List<MyClass> myClasses = Arrays.stream(request.myClassIds())
                 .mapToObj(myClassService::findMyClassFromResponseId)
-                .collect(Collectors.toList());
+                .toList();
         MyClass groupForSemester = myClassService.findMyClassFromResponseId(request.groupForSemesterId());
         AcademicRankDetails academicRankDetails =
                 academicRankDetailsService.findAcademicRankDetailsFromResponseId(request.academicRankId(), semester);
         return new WorkloadEntities(teachingStaff, semester, course, academicRankDetails, myClasses, groupForSemester);
     }
-    private double getProgramCoefficient(MyClass groupForSemester){
-        if(groupForSemester.getDegree() == Degree.MASTER){
-            return 0.75;
-        } else {
-            return 1;
-        }
-    }
-    public double getTotalCreditPoints(double groupAmount, double creditPointsPerGroup, double programCoefficient){
-        System.out.println("getTotalCreditPoints: " + groupAmount + " * " + creditPointsPerGroup + " * " + programCoefficient + " = " + groupAmount*creditPointsPerGroup*programCoefficient);
-        return round(groupAmount*creditPointsPerGroup*programCoefficient,3);
-    }
-    public double getSalaryPerMonth(double salary, double creditPointsOnFullTime, double industryCoefficient){
-        System.out.println("getSalaryPerMonth: "+ salary + " *" + creditPointsOnFullTime + " *" + industryCoefficient + "=" + salary * creditPointsOnFullTime * industryCoefficient);
-        return round(salary * creditPointsOnFullTime * industryCoefficient,3);
-    }
-    public double getCpProportionOnFullTime(double cpForFullTime, double totalCreditPoints){
-        System.out.println("getCpProportionOnFullTime: "+totalCreditPoints + " / " +  cpForFullTime + " = "+ totalCreditPoints/cpForFullTime);
-        return round(totalCreditPoints/cpForFullTime,3);
-    }
-    public static double round(double value, int places) {
-        if (places < 0) throw new IllegalArgumentException();
-        BigDecimal bd = BigDecimal.valueOf(value);
-        bd = bd.setScale(places, RoundingMode.HALF_UP);
-        return bd.doubleValue();
-    }
-    private record WorkloadEntities(
+
+    public record WorkloadEntities(
             TeachingStaff teachingStaff,
             Semester semester,
             Course course,
